# mobile-orienteering

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.gradle.kts  gradle.properties  gradle_log.txt  release.ps1  settings.gradle.kts
.github/workflows/: deploy-docs.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.mobileorienteering.data.local.AppDatabase/: 1.json
docs-src/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs-src/public/: CNAME  sitemap.xml
docs-src/src/: App.tsx  main.tsx
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mobile/: build.gradle.kts  gradle.properties  local.properties.example  settings.gradle.kts
mobile/app/: build.gradle.kts
mobile/buildSrc/: build.gradle.kts
mobile/gradle/: libs.versions.toml
mobile/shared/: build.gradle.kts
scripts/: README.md  release.ps1  rollback-release.ps1  upload_to_playstore.py
server/: .Dockerfile  .dockerignore  .env.example  pyproject.toml
server/src/app/: main.py
server/src/app/core/: config.py  db.py  error_handlers.py  exceptions.py  router.py  security.py
server/src/app/modules/auth/: crud.py  models.py  router.py  schemas.py
server/src/app/modules/health/: router.py
server/src/app/modules/map/: crud.py  models.py  router.py  schemas.py
server/src/app/modules/run/: crud.py  models.py  router.py  schemas.py
server/src/app/modules/user/: crud.py  models.py  router.py  schemas.py
shared/: build.gradle.kts
website/: tsconfig.app.json
website/public/: robots.txt
website/src/: App.tsx  index.css
(+274 files in other folders)
